# expyrun

./: .pylintrc  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: deploy.yml  tests.yml
example/config/: data.yml  example.yml  scheduler.yml  train.yml
example/src/: hello.py
expyrun/: config.py  main.py
src/expyrun/: __init__.py  config.py  main.py
tests/: test_config_parsing.py  test_main.py
